--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,10 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+            "chmod -R 755 bootstrap\/ cache\/",
+            "php artisan optimize"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
