--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8.1",
         "ext-dom": "*",
+        "cloudinary-labs/cloudinary-laravel": "^2.1",
+        "cloudinary/cloudinary_php": "^2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
